ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: muyash-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: muyash-api-static-ip
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "api.muyash.et5bir.gebeya.co"
    http:
      paths:
      - path: /*
        backend:
          serviceName: muyash-backend
          servicePort: 3000
